# ECT-SDK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md
docs/: ECT-SDK-Design-Document-V1.0-EN.md  ECT-SDK-Formal-Test-Log-V1.1-EN.md  ECT-SDK-Implementation-Document-V1.0-EN.md  ECT-SDK-Operator-Formalization-V1.1-EN.md  ECT-SDK-Simulation-&-Behavior-Log-V1.1-EN.md  ECT-SDK-Specification-V1.0-EN.md
examples/: drone_altitude_control.cpp  noise_injection_loop.cpp  saturation_stress_loop.cpp  servo_position_control.cpp  time_varying_target.cpp  time_varying_target_saturation_limit.cpp
include/: ect_config.hpp  ect_e_operator.hpp  ect_f_operator.hpp  ect_finv_operator.hpp  ect_g_operator.hpp  ect_sdk.hpp
src/: ect_e_operator.cpp  ect_f_operator.cpp  ect_finv_operator.cpp  ect_g_operator.cpp  ect_sdk.cpp
tests/: boundedness_test.cpp  contraction_ratio_test.cpp  determinism_test.cpp  monotonicity_test.cpp  sign_preservation_test.cpp  simple_loop_test.cpp
